# bts-bdp-assignment

./: .env  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bdi_api/: app.py  app.py.save  settings.py
bdi_api/s1/: exercise.py
bdi_api/s4/: exercise.py
bdi_api/s5/: exercise.py
bdi_api/s6/: exercise.py
bdi_api/s7/: README.adoc  exercise.py
bdi_api/s8/: README.adoc  exercise.py
bdi_api/s9/: README.adoc  exercise.py
s5/: hr_schema.sql  hr_seed_data.sql
s7/: docker-compose.yml  exercise.py
s8/bts-bdp-s8-exercises/dags/: s8_homework.py
tests/s7/: test_s7.py
tests/s8/: test_s8.py
tests/s9/: test_s9.py
